apps/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-test-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: test-site.rs.nirmalsavinda.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-test-server
                port:
                  number: 8071
