apps/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-test-server
  namespace: express-test
spec:
  selector:
    app: express-test-server
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8210
  type: ClusterIP
