apps/test/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: express-test-virtualservice
  namespace: express-test
spec:
  hosts:
    - test-site.rs.nirmalsavinda.online
  gateways:
    - express-test-gateway
  http:
    - match:
        - uri:
            prefix: /.well-known/acme-challenge
      route:
        - destination:
            host: cm-acme-http-solver  # For cert-manager challenges
            port:
              number: 8089
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: express-test-server.express-test.svc.cluster.local
            port:
              number: 8071
